--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
     "cors": "^2.8.5",
+    "date-fns": "^2.30.0",
+    "dayjs": "^1.11.9",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "nodemailer": "^6.9.4",
