--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,7 @@
     "dayjs": "^1.11.9",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "mysql2": "^3.6.0",
     "nodemailer": "^6.9.4",
     "nodemon": "^3.0.1",
     "validator": "^13.11.0",
