--- a/server/package.json
+++ b/server/package.json
@@ -1,11 +1,13 @@
 {
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "csvtojson": "^2.0.10",
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.9",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.6.0",
     "nodemailer": "^6.9.4",
     "nodemon": "^3.0.1",
