Add login page structure

--- a/server/.env
+++ b/server/.env
@@ -6,3 +6,4 @@ DATABASE_HOST = "localhost"
 DATABASE_USER = "root"
 DATABASE_PASSWORD = "highLake22."
 DATABASE_DATABASE_NAME = "drwatsondentalclinic"
+ACCESS_TOKEN_SECRET = "asfd1h2ro1hor21hdlkasldh1oi2fhi1"
